[package]
name = "vrrb_main"
version = "0.1.0"
authors = ["asmith@vrrb.io"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.20.2", features = ["rand"]}
sha256 = "1.0.2"
rand = {version = "0.6", features = ["std"]}
uuid = { version = "0.8.0", features = ["serde", "v4"] }
bytebuffer = "0.2.1"
chrono = "0.4.19"
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
blake3 = "0.3.8"
strum = "0.20.0"
strum_macros = "0.20.1"
bip39 = "1.0.1"