[package]
name = "vrrb_main"
version = "0.1.0"
authors = ["asmith@vrrb.io"]
edition = "2018"

[lib]
name = "vrrb_lib"
path = "src/lib.rs"

[[bin]]
name = "vrrb_bin"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
secp256k1 = {version = "0.20.2", features = ["rand"]}
sha256 = "1.0.2"
rand = {version = "0.6", features = ["std"]}
uuid = { version = "0.8.0", features = ["serde", "v4"] }
bytebuffer = "0.2.1"
chrono = "0.4.19"
serde_json = "1.0.64"
serde = { version = "1.0.101", features = ["derive"] }
blake3 = "0.3.8"
strum = "0.20.0"
strum_macros = "0.20.1"
bip39 = "1.0.1"
pickledb = "0.4.1"
libp2p = "0.38.0"
futures = "0.3.1"
async-std = {version = "1.6.2", features = ["attributes"]}
tokio = {version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"]}
env_logger = "0.8.1"
hex = "*"
itertools = "0.10.1"
crossterm = { version = "0.19", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"